retrieveUnpackaged/objects/Forms__c.object
<CustomObject>
    <fields>
        <fullName>Organization__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OARM</fullName>
                </value>
                <value>
                    <fullName>OAR</fullName>
                </value>
                <value>
                    <fullName>OCSPP</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OECA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OITA</fullName>
                </value>
                <value>
                    <fullName>OLEM</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
                <value>
                    <fullName>OW</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originator_ORD111__c</fullName>
        <description>ORD-111</description>
        <inlineHelpText>(Old) Stores originator for Forms BEFORE 3/2/2018. This is the person that created the form and originated it for someone else</inlineHelpText>
        <label>Originator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Type1__c</fullName>
        <description>FormsTriggerHandler will populate this field for new forms with original person filling out form and keep that value.  &quot;Originator__c&quot; is formula that copies &quot;Form_Owner__c&quot; as it changes.</description>
        <inlineHelpText>Stores originator for Forms AFTER 3/2/2018. This is the person that created the form and originated it for someone else</inlineHelpText>
        <label>Originator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <description>ORD-111</description>
        <formula>Form_Owner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Originator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Description__c</fullName>
        <description>ORD-111</description>
        <label>Other Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details_1__c</fullName>
        <description>ORD-111</description>
        <label>Other Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details_2__c</fullName>
        <description>ORD-111</description>
        <label>Other Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Details_3__c</fullName>
        <description>ORD-111</description>
        <label>Other Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Participating_Organization_s__c</fullName>
        <description>ORD-111</description>
        <label>Participating Organization(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK( IF( ISBLANK( Prepare_Form_for__c ) ,
 Type_1_Owner_Contact__r.Pay_Plan__c ,
  Prepare_Form_for__r.Pay_Plan__c )),
&quot;[This field will populate after save.]&quot;,  
IF( ISBLANK( Prepare_Form_for__c ) ,
 Type_1_Owner_Contact__r.Pay_Plan__c ,
  Prepare_Form_for__r.Pay_Plan__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pay Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Per_diem__c</fullName>
        <description>SF-182</description>
        <label>Per diem</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Position_Level__c</fullName>
        <description>SF-182</description>
        <label>Position Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Non-supervisory</fullName>
                </value>
                <value>
                    <fullName>Supervisory</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK( IF( ISBLANK( Prepare_Form_for__c ) , 
Type_1_Owner_Contact__r.Position_Title__c , 
Prepare_Form_for__r.Position_Title__c)), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ) , 
Type_1_Owner_Contact__r.Position_Title__c , 
Prepare_Form_for__r.Position_Title__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Position Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepare_Form_for__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SF-182, ORD-111</description>
        <label>Prepare Form As Person Other Than Self</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Prepare Form for:)</relationshipLabel>
        <relationshipName>Formsx1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Printable_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/FormPrintablePDF?id=&quot;+Id, &quot;Right-click this text and select &apos;Open in New Tab&apos;&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Printable View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Processing_Date__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Processing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Type_s__c</fullName>
        <description>ORD-111</description>
        <label>Project Type(s):</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Environmental Measurements</fullName>
                </value>
                <value>
                    <fullName>Use of Existing Data</fullName>
                </value>
                <value>
                    <fullName>Models\Applications</fullName>
                </value>
                <value>
                    <fullName>Informatics</fullName>
                </value>
                <value>
                    <fullName>Decision Support Tools</fullName>
                </value>
                <value>
                    <fullName>Environmental Technology</fullName>
                </value>
                <value>
                    <fullName>Other (use &quot;Describe Other&quot; field)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Card_Request_Type__c</fullName>
        <label>Purchase Card Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Purchase Card</fullName>
                </value>
                <value>
                    <fullName>New Convenience Check</fullName>
                </value>
                <value>
                    <fullName>New Approving Official (AO)</fullName>
                </value>
                <value>
                    <fullName>Cancellation of Card or Check</fullName>
                </value>
                <value>
                    <fullName>Change Cardholder AO</fullName>
                </value>
                <value>
                    <fullName>Change Contact Information</fullName>
                </value>
                <value>
                    <fullName>Change Monthly Limit</fullName>
                </value>
                <value>
                    <fullName>Change Name on Card or Check</fullName>
                </value>
                <value>
                    <fullName>Suspension of Card or Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Approval_Date__c</fullName>
        <description>ORD-111</description>
        <label>QA Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Category__c</fullName>
        <description>ORD-111</description>
        <label>QA Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>To Be Specified in Individual Actions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Documentation_Options__c</fullName>
        <defaultValue>&quot;For solicitations, complete items 1-4; for all actions other than solicitations, complete items 3-4. All documentation specified under “Other” must be defined in the organizational Quality Management Plan and be consistent with requirements defined in EPA Manual 5360 A1 (CIO 2105-P-01-0). For all items checked below, there must be adequate information in the SOW (or its appendices) for the submitter to develop this documentation. Where applicable, reference a specific section of the SOW. (R-2 refers to EPA Requirements for Quality Management Plans (QA/R-2) (EPA/240/B-01/002) and R-5 refers to EPA Requirements for Quality Assurance Project Plans (QA/R-5) (EPA/240/B-01/003). Copies of these documents are available at http://www.epa.gov/quality/qa_docs.html)&quot;</defaultValue>
        <description>ORD-111</description>
        <label>QA Documentation Options:</label>
        <length>766</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QA_Documentation__c</fullName>
        <description>ORD-111</description>
        <label>QA Documentation:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Revision of Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QA_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>ORD-111</inlineHelpText>
        <label>QA Manager</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>User not found in QA Manager list.</errorMessage>
            <filterItems>
                <field>User.QA_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Notice! This user is not designated as a QA Manager.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>FormsY3wv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Tracking_Number__c</fullName>
        <description>ORD-111</description>
        <label>QA Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason_for_Cancelling_Cardholder_Account__c</fullName>
        <label>Reason for Cancelling Cardholder Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account(s) No Longer Needed</fullName>
                </value>
                <value>
                    <fullName>Lost of Misplace Card or Checks</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Resigned/Terminated</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Transferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Temporary_Closure__c</fullName>
        <label>Reason for Temporary Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Extended Sick Leave</fullName>
                </value>
                <value>
                    <fullName>Detailed to a New Job/Office</fullName>
                </value>
                <value>
                    <fullName>Leave of Absence</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Employee_ID_No__c</fullName>
        <description>EPA3160-6v5</description>
        <label>Employee ID No.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>EPA-3160-6v5</description>
        <label>Recipient Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Recipient Name)</relationshipLabel>
        <relationshipName>Forms4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient_Organization__c</fullName>
        <description>EPA-3160-6v5</description>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OARM</fullName>
                </value>
                <value>
                    <fullName>OAR</fullName>
                </value>
                <value>
                    <fullName>OCSPP</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OECA</fullName>
                </value>
                <value>
                    <fullName>OEI</fullName>
                </value>
                <value>
                    <fullName>OGC</fullName>
                </value>
                <value>
                    <fullName>OITA</fullName>
                </value>
                <value>
                    <fullName>OLEM</fullName>
                </value>
                <value>
                    <fullName>ORD</fullName>
                </value>
                <value>
                    <fullName>OW</fullName>
                </value>
                <value>
                    <fullName>OIG</fullName>
                </value>
                <value>
                    <fullName>OA</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>RTP</fullName>
                </value>
                <value>
                    <fullName>Cincinnati</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Ann Arbor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recipient_Work_Phone_No__c</fullName>
        <description>EPA-3160-6v5</description>
        <formula>Recipient_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Phone No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Office_Divison__c</fullName>
        <formula>Cardholder_AO_Name__r.Account.Name</formula>
        <label>Region/Office/Divison</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Application_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Application Name</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <description>EPA-3160-6</description>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Donation (Member)</fullName>
                </value>
                <value>
                    <fullName>Donation (Non-Member)</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>New Employee</fullName>
                </value>
                <value>
                    <fullName>Open Season</fullName>
                </value>
                <value>
                    <fullName>Resubmission</fullName>
                </value>
                <value>
                    <fullName>Withdrawal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_is_for__c</fullName>
        <label>Request is for?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Myself</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_1__c</fullName>
        <description>ORD-111</description>
        <label>Response:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No (If no, go to &quot;Signatures&quot; Section.)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_2__c</fullName>
        <description>ORD-111</description>
        <label>Response:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Response_3__c</fullName>
        <description>ORD-111</description>
        <label>Response:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Select the role of the requested user</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>TimeKeeper</fullName>
                </value>
                <value>
                    <fullName>FCO</fullName>
                </value>
                <value>
                    <fullName>Health &amp; Safety Officer</fullName>
                </value>
                <value>
                    <fullName>Section 508 Compliance Approver</fullName>
                </value>
                <value>
                    <fullName>IT Approver</fullName>
                </value>
                <value>
                    <fullName>Training Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SF_182_Override_Instructions__c</fullName>
        <defaultValue>&quot;This form will be submitted to your supervisor(s) and funding officials as designated by your approval profile. This profile can be modified using the \&quot;Edit My Approvers\&quot; link on the BAP Forms Home Page. If you know an approver is out of the office and need to designate a replacement, begin typing in the appropriate box below to search. Then, click the person&apos;s name when it appears. Note: If you have previously saved the form, you will need to remove the saved approver&apos;s name by clicking the \&quot;X\&quot; prior to searching for a new approver.&quot;</defaultValue>
        <description>SF-182</description>
        <label>SF-182 Override Instructions</label>
        <length>540</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF_182_Prepare_For_checker__c</fullName>
        <formula>IF(  CONTAINS(Approval_Step__c, &apos;Form Prepared for&apos;) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF-182 Prepare For checker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SandboxURL__c</fullName>
        <label>SandboxURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sandbox_Last_Refreshed__c</fullName>
        <label>Sandbox Last Refreshed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Select_Card_Holder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SF-182</description>
        <label>Select Card Holder</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Select Card Holder)</relationshipLabel>
        <relationshipName>Forms1SCH</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Select_Documentation_Type_1__c</fullName>
        <description>ORD-111</description>
        <label>1. Select Documentation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation of an organization’s Quality System</fullName>
                </value>
                <value>
                    <fullName>Combined documentation &amp; application (QA/QC) to contract&apos;s single project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Documentation_Type_3__c</fullName>
        <description>ORD-111</description>
        <label>3. Select Documentation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Documentation of an organization’s Quality System</fullName>
                </value>
                <value>
                    <fullName>Combined documentation &amp; application (QA/QC) to contract&apos;s single project</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK( IF( ISBLANK( Prepare_Form_for__c ) , 
Type_1_Owner_Contact__r.Occ_Series__c , 
Prepare_Form_for__r.Occ_Series__c )), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ) , 
Type_1_Owner_Contact__r.Occ_Series__c , 
Prepare_Form_for__r.Occ_Series__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Series</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Comp_Date_MM_YYYY__c</fullName>
        <inlineHelpText>Please enter in your service comp date is the MM/YYYY format</inlineHelpText>
        <label>Service Comp. Date (MM/YYYY)</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Purchase_Limit__c</fullName>
        <defaultValue>3500</defaultValue>
        <label>Single Purchase Limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Comments__c</fullName>
        <description>ORD-111</description>
        <label>Special Comments</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_accommodation_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SF-182</description>
        <label>Special accommodation needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <defaultValue>$User.State</defaultValue>
        <label>State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <description>SF-182</description>
        <formula>IF( ISBLANK( IF( ISBLANK( Prepare_Form_for__c ) , 
Type_1_Owner_Contact__r.Step__c , 
Prepare_Form_for__r.Step__c )), 
&quot;[This field will populate after save.]&quot;, 
IF( ISBLANK( Prepare_Form_for__c ) , 
Type_1_Owner_Contact__r.Step__c , 
Prepare_Form_for__r.Step__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Step</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_on_Behalf_Of__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Submitted on Behalf Of</description>
        <label>Submitted on Behalf Of</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>EPA Person</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_BAP_Provisioning__c</fullName>
        <defaultValue>&quot;mailto:BAP_Admins@epa.gov&quot;</defaultValue>
        <description>BAP Provisioning</description>
        <label>Support BAP Provisioning</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_EPA_100__c</fullName>
        <defaultValue>&quot;mailto:McNeal.Detha@epa.gov&quot;</defaultValue>
        <description>EPA-100</description>
        <label>Support EPA-100</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_EPA_3160_6v5__c</fullName>
        <defaultValue>&quot;mailto:OHRLeaveQuestions@epa.gov&quot;</defaultValue>
        <description>EPA-3160-6v5</description>
        <label>Support EPA-3160-6v5</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_ORD_111__c</fullName>
        <defaultValue>&quot;https://epaoei--c.na21.visual.force.com/resource/1515007760000/ORD_111_QARF_Instructions&quot;</defaultValue>
        <description>ORD-111</description>
        <label>Support ORD-111</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_SF_182__c</fullName>
        <defaultValue>&quot;https://usepa.sharepoint.com/sites/OARM_Community/EPAU/SitePages/&quot;+BR()+&quot;Training%20Officers%20&amp;%20Coordinators.aspx&quot;</defaultValue>
        <description>SF-182</description>
        <label>Support SF-182</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Support_Sample_Record_Type__c</fullName>
        <defaultValue>&quot;mailto:test@fake.ccc&quot;</defaultValue>
        <description>Sample Record Type for Testing</description>
        <label>Support Sample Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Please enter the person to activate as supervisor, timekeeper, etc.</description>
        <inlineHelpText>Please enter the person to activate as supervisor, timekeeper, etc.</inlineHelpText>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms (Technical Contact)</relationshipLabel>
        <relationshipName>Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Telephone_Number__c</fullName>
        <defaultValue>$User.Phone</defaultValue>
        <label>Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title_QA__c</fullName>
        <description>ORD-111</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>ORD-111, EPA-3160-6v5</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Be_Prepared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ORD-111</description>
        <label>To Be Prepared</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>